--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "next": "14.1.1",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "recharts": "^2.12.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
