--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_BASE_URL="http://localhost:1337"
+NEXT_PUBLIC_TOKEN="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiaWF0IjoxNzExOTY0MzczLCJleHAiOjE3MTQ1NTYzNzN9.G8HdR0N6ejRJ7oxc0BzNDhTA3q3MRUL56h0aIz7TO1w"
