--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-NEXT_PUBLIC_BASE_URL="http://115.127.24.183:1337"
-NEXT_PUBLIC_TOKEN="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiaWF0IjoxNzExOTY0MzczLCJleHAiOjE3MTQ1NTYzNzN9.G8HdR0N6ejRJ7oxc0BzNDhTA3q3MRUL56h0aIz7TO1w"
+NEXT_PUBLIC_BASE_URL="https://api.mukta.info.bd"
 NEXT_PUBLIC_JWT_SECRET=34YyumbUcjf+duOOK02W8w==
 NEXT_PUBLIC_IRON_SECRET="6^4?D4972[@%yG`aO*E;<q#V]~7U\IU3fM::"
