--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# NEXT_PUBLIC_BASE_URL="https://api.mukta.info.bd"
-NEXT_PUBLIC_BASE_URL="http://127.0.0.1:1337"
+NEXT_PUBLIC_BASE_URL="https://api.mukta.info.bd"
+# NEXT_PUBLIC_BASE_URL="http://127.0.0.1:1337"
 NEXT_PUBLIC_JWT_SECRET=34YyumbUcjf+duOOK02W8w==
 NEXT_PUBLIC_IRON_SECRET="6^4?D4972[@%yG`aO*E;<q#V]~7U\IU3fM::"
